src/tess/tl/test/pass/test_lambda_apply.tl
#module main
apply(f) { f() }

main() {
    a := 0
    l := () { a }
    apply(l)
}
