src/tess/tl/test/fail/test_fail_function_pointer_missing_arity_arg.tl
#module main

add(a, b) { a + b }
apply(f, x, y) { f(x, y) }

main() {
    apply(add, 1, 2)
}
